@@ -1,3 +1,4 @@
+import logging
 import sys
 import transaction
 import zope.component
@@ -13,7 +14,8 @@ def setUp(
     queue_installer=zc.async.subscribers.queue_installer,
     dispatcher_installer=zc.async.subscribers.ThreadedDispatcherInstaller(
         poll_interval=0.1),
-    agent_installer=zc.async.subscribers.agent_installer):
+    agent_installer=zc.async.subscribers.agent_installer,
+    log_file=sys.stdout, log_level=logging.CRITICAL):
     """Set up zc.async, as is needed for Zope 3 functional tests.
     """
     if connection is None:
@@ -29,10 +31,25 @@ def setUp(
     zc.async.testing.get_poll(dispatcher, count=0)
     assert "" in zc.async.testing.get_poll(dispatcher)
     assert dispatcher.activated is not None
+    if log_file is not None:
+        # this helps with debugging critical problems that happen in your
+        # zc.async calls.  Of course, if your test
+        # intentionally generates CRITICAL log messages, you may not want this;
+        # pass ``log_file=None`` to setUp.
+        logger = logging.getLogger('zc.async')
+        # stashing this on the dispatcher is a hack, but at least we're doing
+        # it on code from the same package.
+        dispatcher._debug_handler = logging.StreamHandler(log_file)
+        logger.setLevel(log_level)
+        logger.addHandler(dispatcher._debug_handler)
 
 
 def tearDown():
     dispatcher = zc.async.dispatcher.get()
+    if getattr(dispatcher, '_debug_handler', None) is not None:
+        logger = logging.getLogger('zc.async')
+        logger.removeHandler(dispatcher._debug_handler)
+        del dispatcher._debug_handler
     dispatcher.reactor.callFromThread(dispatcher.reactor.stop)
     dispatcher.thread.join(3)
     zc.async.dispatcher.clear()
